<resources>
    <string name="app_name">E-Farming : Client</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign up</string>
    <string name="log_session">Email : </string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="dnt_have_sign_up">Don\'t have a account ? Sign up</string>
    <string name="alrdy_have_ac">Already have a account ? Sign in</string>
    <string name="denied_title">Unable to get %s </string>
    <string name="denied_msg">You have denied the permission for getting %s access.. Please go to app appSettings and allow permission</string>

    <string name="cancel">Cancel</string>
    <string name="go_to_appsettings">go to AppSettings</string>
    <string name="choose_one">Choose one</string>
    <string name="storage_permission_required">Storage permission required for this app</string>
    <string name="go_to_settings_enable_permission">Go to settings and enable permissions</string>
    <string name="storage">Storage</string>
    <string name="camera">Camera</string>
    <string name="don_t_have_an_account_then_signup">Don\'t have an account?\u0020 Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account?\u0020 Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_your_company_photo">Add your company photo</string>
    <string name="company_address">Company Address</string>
    <string name="title_activity_address_fetch">Point your address</string>
    <string name="gps_alert_message">Your GPS seems to be disabled, you must enable GPS(Mode:High Accuracy) to continue.</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAfPYXZkpF_Ll5Gvz8XhoHo0aY8jx_TCFY</string>
    <string name="address_marker">Long click &amp; Move the red marker to get address</string>
    <string name="fetch_address">Fetching the address</string>
    <string name="change_marker">Try again to get the address or change the marker location</string>
    <string name="submit">Submit</string>
    <string name="err_msg">Couldn\'t connect to the server, please try again</string>
    <string name="err_internet">Please connect to the Internet</string>
    <string name="location_permission_required">Location permission required for this app</string>
    <string name="go_to_settings_enable_location_permission">Go to settings and enable location permission</string>
    <string name="add_your_product_photo">Add your product photo</string>
    <string name="enter_your_product_name">Product name</string>
    <string name="enter_your_product_quantity">Product quantity</string>
    <string name="enter_your_product_price">Product price [INR]</string>
    <string name="add_product">Add Product</string>
    <string name="no_image_available">No Image Available</string>
    <string name="maps">Navigation</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigate">Navigate</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="click_here">Click here to select location</string>
</resources>
