<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:scrollbars="none"
    tools:context="com.ko.efarming.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back_white_36dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="30dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="30dp"
                android:background="@drawable/white_semi_round_corner"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <include layout="@layout/common_layout_clear_focus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_password_msg"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:drawableLeft="@drawable/ic_email_black_18dp"
                            android:drawablePadding="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="295dp"
                android:background="@drawable/ripple_green_button"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>

